Add OGC API Records Transactions demo

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1625,6 +1625,150 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7999ab0-acc9-4246-b4c6-87588748f972",
+   "metadata": {},
+   "source": [
+    "### OGC API Records Transactions demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d64d9858-cc16-4ed5-ad04-c6af05e5afda",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, the user will use the OWSLib client library to create/update/delete a record using the Transactions interface."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef8c0bf0-070f-4b3f-bcc5-9ba0d951841e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from owslib.ogcapi.records import Records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcc81262-2e5a-410d-8c74-2296bd581ddf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "record_data = '../data/sample-record.json'\n",
+    "url = 'http://172.18.0.1:5000'\n",
+    "collection_id = 'metadata:main'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "508abd96-d238-4583-ac6a-1f02b7dc9118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = Records(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d49a965-19bb-48f1-994b-ffde01f7cf99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat = r.collection(collection_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8332075f-913a-432d-ad60-4f6d0a0d1ba1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(record_data) as fh:\n",
+    "    data = json.load(fh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e0f871a-9e8f-4c65-b3bd-476ca607cfe6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "identifier = data['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e38d9e2-4359-4917-aa00-d3578da1065a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.collection_item_delete(collection_id, identifier)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9d39112-86bb-453b-b010-ef46954d1059",
+   "metadata": {},
+   "source": [
+    "Insert metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c0d9f4a-215c-4261-bd9b-d82938b07a2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.collection_item_create(collection_id, data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4adbe115-c326-4918-b417-0278d60016a6",
+   "metadata": {},
+   "source": [
+    "Update metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68b88a3d-1268-4da0-b189-2b7cd451fa8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.collection_item_update(collection_id, identifier, data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "111560db-41be-417b-98c8-d58322c0093d",
+   "metadata": {},
+   "source": [
+    "Delete metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7771e89-2534-4279-a2ff-1caaa1a19142",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.collection_item_delete(collection_id, identifier)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "39b444fc-db2b-47d1-b1ec-4d3afc037ee2",
    "metadata": {},
    "source": [
