--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1633,10 +1633,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a0bcfd7f-513c-4b56-bb16-2665371ba02e",
+   "metadata": {},
+   "source": [
+    "Examples of OGC API transactions using OGC API - Features - Part 4: Create, Replace, Update and Delete in the context of OGC API - Records metadata management."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d64d9858-cc16-4ed5-ad04-c6af05e5afda",
    "metadata": {},
    "source": [
-    "In this part of the demo, the user will use the OWSLib client library to create/update/delete a record using the Transactions interface."
+    "In this part of the demo, the user will use the OWSLib client library to create/update/delete a record using the OGC API Transactions interface."
    ]
   },
   {
