Update description and pycsw url

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1666,7 +1666,7 @@
    "outputs": [],
    "source": [
     "record_data = '../data/sample-record.json'\n",
-    "url = 'http://172.18.0.1:5000'\n",
+    "url = 'http://172.21.0.2:8000'\n",
     "collection_id = 'metadata:main'"
    ]
   },
@@ -1745,6 +1745,16 @@
    "metadata": {},
    "source": [
     "Update metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcb41adc-5c47-49cc-b991-d00149f65d55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['properties']['description'] = \"Update description\""
    ]
   },
   {
