Adding STAC Item Transaction demo

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1666,7 +1666,7 @@
    "outputs": [],
    "source": [
     "record_data = '../data/sample-record.json'\n",
-    "url = 'http://172.21.0.2:8000'\n",
+    "url = 'http://172.21.0.3:8000'\n",
     "collection_id = 'metadata:main'"
    ]
   },
@@ -1779,6 +1779,72 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e7771e89-2534-4279-a2ff-1caaa1a19142",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.collection_item_delete(collection_id, identifier)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "300f1897-0c2c-4779-8a6e-78e13962c81b",
+   "metadata": {},
+   "source": [
+    "Next, the user will ingest a STAC Item through the OGC API transactions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76e9067d-0214-44fb-a72f-9f6c92117938",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stac_data = '../data/S2A_MSIL2A_20190212T192651_N0212_R013_T07HFE_20201007T160857.json'\n",
+    "with open(stac_data) as sf:\n",
+    "    si = json.load(sf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05a70882-6b26-4cc9-8c59-962b1d512e58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "identifier = si['id']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d51f40d2-8165-491f-87cf-fdbec02cfd2b",
+   "metadata": {},
+   "source": [
+    "Insert metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daacd0d5-2a2e-4c8d-be7d-e75076c76b44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.collection_item_create(collection_id, si)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7492220-1839-411d-82dd-747713a7aa80",
+   "metadata": {},
+   "source": [
+    "Delete metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0e8682d-efb7-4b4b-b714-02d2ec999497",
    "metadata": {},
    "outputs": [],
    "source": [
