Testing transactions on develop cluster

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1666,7 +1666,8 @@
    "outputs": [],
    "source": [
     "record_data = '../data/sample-record.json'\n",
-    "url = 'http://172.21.0.3:8000'\n",
+    "#system_catalogue_endpoint = 'http://172.21.0.3:8000'\n",
+    "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'\n",
     "collection_id = 'metadata:main'"
    ]
   },
@@ -1677,7 +1678,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = Records(url)"
+    "r = Records(system_catalogue_endpoint)"
    ]
   },
   {
