Add records counter

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1715,11 +1715,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "59ae2cec-cea1-4019-930c-bc52f8f6fee7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query = r.collection_items(collection_id)\n",
+    "my_catalogue_query['numberMatched']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0e38d9e2-4359-4917-aa00-d3578da1065a",
    "metadata": {},
    "outputs": [],
    "source": [
     "r.collection_item_delete(collection_id, identifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbf970a6-e3e6-41a4-9008-4531b8b432b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query = r.collection_items(collection_id)\n",
+    "my_catalogue_query['numberMatched']"
    ]
   },
   {
@@ -1738,6 +1760,17 @@
    "outputs": [],
    "source": [
     "r.collection_item_create(collection_id, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bd5d809-2691-41a6-bc43-dd33e2976782",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query = r.collection_items(collection_id)\n",
+    "my_catalogue_query['numberMatched']"
    ]
   },
   {
@@ -1784,6 +1817,17 @@
    "outputs": [],
    "source": [
     "r.collection_item_delete(collection_id, identifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e594566-7116-4f5e-b3c2-810d91504102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query = r.collection_items(collection_id)\n",
+    "my_catalogue_query['numberMatched']"
    ]
   },
   {
