[processing] Improve output formatting

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -470,7 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(response.status_code, response.headers, response.text)"
+    "print(f\"status: {response.status_code}\\nheaders: {response.headers}\\nbody...\\n{json.dumps(response.json(), indent = 2)}\")"
    ]
   },
   {
