Test transactions on develop cluster only

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1666,7 +1666,7 @@
    "outputs": [],
    "source": [
     "record_data = '../data/sample-record.json'\n",
-    "#system_catalogue_endpoint = 'http://172.21.0.3:8000'\n",
+    "base_domain = \"develop.eoepca.org\"\n",
     "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'\n",
     "collection_id = 'metadata:main'"
    ]
@@ -1858,6 +1858,24 @@
    "outputs": [],
    "source": [
     "identifier = si['id']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e45664ee-6e1c-4012-a10a-5188dbe6b789",
+   "metadata": {},
+   "source": [
+    "Delete metadata in case the identifier already exists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dab60b51-efe4-40bc-ba8c-fd8b8de47469",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.collection_item_delete(collection_id, identifier)"
    ]
   },
   {
