Add records counter

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1861,6 +1861,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edc26e7d-1743-4d6a-9155-b4bdf000b2ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query = r.collection_items(collection_id)\n",
+    "my_catalogue_query['numberMatched']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e45664ee-6e1c-4012-a10a-5188dbe6b789",
    "metadata": {},
@@ -1876,6 +1887,17 @@
    "outputs": [],
    "source": [
     "r.collection_item_delete(collection_id, identifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d9e798d-5116-4c55-9f2a-ecc8a30ee10d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query = r.collection_items(collection_id)\n",
+    "my_catalogue_query['numberMatched']"
    ]
   },
   {
@@ -1897,6 +1919,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5be3d9e-7bd1-4c8d-bbf8-f45454a6b5f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query = r.collection_items(collection_id)\n",
+    "my_catalogue_query['numberMatched']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f7492220-1839-411d-82dd-747713a7aa80",
    "metadata": {},
@@ -1912,6 +1945,17 @@
    "outputs": [],
    "source": [
     "r.collection_item_delete(collection_id, identifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1aa3f8e9-b9c9-46b2-995c-8fb9ee5eacf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query = r.collection_items(collection_id)\n",
+    "my_catalogue_query['numberMatched']"
    ]
   },
   {
