Update OpenSearch catalogue part

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -996,74 +996,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67ee6403-0a64-40a8-8ebc-03e8b8218a33",
-   "metadata": {},
-   "source": [
-    "The user can also include parameters in the search, like the parent identifier for collection level search"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d421e192-0c2b-44bb-8d39-c90200f01cd3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = client.search(params={\"{eo:parentIdentifier?}\": {\"value\": \"S2MSI2A\"}})\n",
-    "len(results)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a7cf104c-a893-4f9d-8312-1a0d13b1f717",
-   "metadata": {},
-   "source": [
-    "The user can also use OpenSearch EO mathematical notation to filter based on other parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f02659d6-2273-4baa-940c-dfe9ade298c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# OpenSearch EO mathematical notation\n",
-    "# n1 equal to field = n1\n",
-    "# {n1,n2,…} equals to field=n1 OR field=n2 OR …\n",
-    "# [n1,n2] equal to n1 <= field <= n2\n",
-    "# [n1,n2[ equals to n1 <= field < n2\n",
-    "# ]n1,n2[ equals to n1 < field < n2\n",
-    "# ]n1,n2] equal to n1 < field  <= n2\n",
-    "# [n1 equals to n1<= field\n",
-    "# ]n1 equals to n1 < field\n",
-    "# n2] equals to field <= n2\n",
-    "# n2[ equals to field < n2\n",
-    "\n",
-    "results = client.search(params={\"{eo:cloudCover?}\": {\"value\": \"]20\"}})  # eo:cloudCover > 20\n",
-    "len(results)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "47249390-cace-4f01-9dee-c9b10e2ed0fd",
-   "metadata": {},
-   "source": [
-    "Then the user can access a specific record through a list (with a JSON representation):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c19ceaa4-e7cf-4b90-9139-cedf782445a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results[1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "baccad08-f193-4379-90ba-0da0ce330f46",
    "metadata": {},
    "source": [
@@ -1116,7 +1048,7 @@
    "id": "86704c40-cd73-41d5-9a92-702b5f15faf0",
    "metadata": {},
    "source": [
-    "The a GetRecords request (in the context of OpenSearch) is performed"
+    "A GetRecords request (in the context of OpenSearch) is performed"
    ]
   },
   {
@@ -1155,20 +1087,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f970e9c-f032-4949-930d-93e90cf873e2",
+   "id": "a7cf104c-a893-4f9d-8312-1a0d13b1f717",
    "metadata": {},
    "source": [
-    "A similar OpenSearch request is demonstrated for the workspace catalogue endpoint"
+    "The user can also use OpenSearch EO mathematical notation to filter based on other parameters"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7e61ee8-062f-486e-9363-7b3aa5465226",
+   "id": "f02659d6-2273-4baa-940c-dfe9ade298c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = system_catalogue_endpoint + '?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record'\n",
+    "# OpenSearch EO mathematical notation\n",
+    "# n1 equal to field = n1\n",
+    "# {n1,n2,…} equals to field=n1 OR field=n2 OR …\n",
+    "# [n1,n2] equal to n1 <= field <= n2\n",
+    "# [n1,n2[ equals to n1 <= field < n2\n",
+    "# ]n1,n2[ equals to n1 < field < n2\n",
+    "# ]n1,n2] equal to n1 < field  <= n2\n",
+    "# [n1 equals to n1<= field\n",
+    "# ]n1 equals to n1 < field\n",
+    "# n2] equals to field <= n2\n",
+    "# n2[ equals to field < n2\n",
+    "\n",
+    "url = system_catalogue_endpoint + 'mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&eo:cloudCover=]20'\n",
     "R = S.get(url=url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
