--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1112,7 +1112,7 @@
     "# n2] equals to field <= n2\n",
     "# n2[ equals to field < n2\n",
     "\n",
-    "url = system_catalogue_endpoint + 'mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&eo:cloudCover=]20'\n",
+    "url = system_catalogue_endpoint + '?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&eo:cloudCover=]20'\n",
     "R = S.get(url=url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
