Update resource catalogue transactions part due to post issue in owslib

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1599,6 +1599,7 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import requests\n",
     "from owslib.ogcapi.records import Records"
    ]
   },
@@ -1703,7 +1704,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r.collection_item_create(collection_id, data)"
+    "#Disabled due to POST issue https://github.com/geopython/pycsw/issues/809\n",
+    "#r.collection_item_create(collection_id, data)\n",
+    "\n",
+    "url = f'{system_catalogue_endpoint}/collections/metadata:main/items'\n",
+    "headers = {'content-type': 'application/geo+json'}\n",
+    "payload = open(record_data)\n",
+    "req = requests.post(url, data=payload, headers=headers)"
    ]
   },
   {
@@ -1859,7 +1866,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r.collection_item_create(collection_id, si)"
+    "#Disabled due to POST issue https://github.com/geopython/pycsw/issues/809\n",
+    "#r.collection_item_create(collection_id, si)\n",
+    "\n",
+    "url = f'{system_catalogue_endpoint}/collections/metadata:main/items'\n",
+    "headers = {'content-type': 'application/geo+json'}\n",
+    "payload = open(stac_data)\n",
+    "req = requests.post(url, data=payload, headers=headers)"
    ]
   },
   {
@@ -1900,6 +1913,29 @@
    "source": [
     "my_catalogue_query = r.collection_items(collection_id)\n",
     "my_catalogue_query['numberMatched']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23da9f9d-613d-464a-a372-bdcedf415f44",
+   "metadata": {},
+   "source": [
+    "Alternative method to demo Transactions using curl from terminal:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5525e3cd-e877-4e3a-bbeb-2169c6f1f328",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# insert metadata\n",
+    "# curl -v -H \"Content-Type: application/geo+json\" -XPOST https://resource-catalogue.develop.eoepca.org/collections/metadata:main/items -d @sample-record.json\n",
+    "# update metadata\n",
+    "# curl -v -H \"Content-Type: application/geo+json\" -XPUT https://resource-catalogue.develop.eoepca.org/collections/metadata:main/items/foorecord -d @sample-record.json\n",
+    "# delete metadata\n",
+    "# curl -v -XDELETE https://resource-catalogue.develop.eoepca.org/collections/metadata:main/items/foorecord"
    ]
   },
   {
