--- a/demoroot/notebooks/05 Data Access.ipynb
+++ b/demoroot/notebooks/05 Data Access.ipynb
@@ -81,8 +81,8 @@
    "outputs": [],
    "source": [
     "#scene_id='S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'\n",
-    "#scene_id='S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'\n",
-    "scene_id=\"S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE\"\n",
+    "# scene_id='S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'\n",
+    "scene_id=\"S2B_MSIL2A_20190912T084559_N0213_R107_T36UXA_20190912T122242.SAFE\"\n",
     "\n",
     "#scene_id='S2B_MSIL1C_20210402T095029_R079_T33UXQ_20210402T121737'"
    ]
@@ -265,10 +265,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "getMap(wms,'S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE__TRUE_COLOR',(13.8,36.9,15.1,37.9), 'rgb.png')\n",
+    "getMap(wms,f\"{scene_id}__TRUE_COLOR\",wms[scene_id].boundingBoxWGS84, 'rgb.png')\n",
     "image1=mpimg.imread('rgb.png')\n",
     "fig = plt.figure(figsize=(12,7))\n",
-    "img1=plt.imshow(image1,extent=[13.8,15.1,36.9,37.9],aspect='auto')\n",
+    "img1=plt.imshow(image1,extent=wms[scene_id].boundingBoxWGS84,aspect='auto')\n",
     "plt.show()"
    ]
   },
@@ -287,10 +287,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "getMap(wms,'S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE__FALSE_COLOR',(13.8,36.9,15.1,37.9), 'nirrg.png')\n",
+    "getMap(wms,f\"{scene_id}__FALSE_COLOR\",wms[scene_id].boundingBoxWGS84, 'nirrg.png')\n",
     "image1=mpimg.imread('nirrg.png')\n",
     "fig = plt.figure(figsize=(12,7))\n",
-    "img1=plt.imshow(image1,extent=[13.8,15.1,36.9,37.9],aspect='auto')\n",
+    "img1=plt.imshow(image1,extent=wms[scene_id].boundingBoxWGS84,aspect='auto')\n",
     "plt.show()"
    ]
   },
@@ -301,10 +301,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "getMap(wms,'S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE__NDVI',(13.8,36.9,15.1,37.9), 'ndvi.png', style='summer')\n",
+    "getMap(wms,f\"{scene_id}__NDVI\",wms[scene_id].boundingBoxWGS84, 'ndvi.png', style='summer')\n",
     "image1=mpimg.imread('ndvi.png')\n",
     "fig = plt.figure(figsize=(12,7))\n",
-    "img1=plt.imshow(image1,extent=[13.8,15.1,36.9,37.9],aspect='auto')\n",
+    "img1=plt.imshow(image1,extent=wms[scene_id].boundingBoxWGS84,aspect='auto')\n",
     "plt.show()"
    ]
   },
@@ -315,10 +315,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "getMap(wms,'S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__TRUE_COLOR',(23.4,37.8,24.5,38.8), 'rgb.png')\n",
+    "getMap(wms,f\"{scene_id}__TRUE_COLOR\",wms[scene_id].boundingBoxWGS84, 'rgb.png')\n",
     "image1=mpimg.imread('rgb.png')\n",
     "fig = plt.figure(figsize=(12,7))\n",
-    "img1=plt.imshow(image1,extent=[23.4,24.5,37.8,38.8],aspect='auto')\n",
+    "img1=plt.imshow(image1,extent=wms[scene_id].boundingBoxWGS84,aspect='auto')\n",
     "plt.show()"
    ]
   },
@@ -354,7 +354,9 @@
    },
    "outputs": [],
    "source": [
-    "m = folium.Map(location=[37, 14], zoom_start=6, tiles=None)\n",
+    "centre_lat=wms[scene_id].boundingBoxWGS84[1]+(wms[scene_id].boundingBoxWGS84[3]-wms[scene_id].boundingBoxWGS84[1])/2\n",
+    "centre_long=wms[scene_id].boundingBoxWGS84[0]+(wms[scene_id].boundingBoxWGS84[2]-wms[scene_id].boundingBoxWGS84[0])/2\n",
+    "m = folium.Map(location=[centre_lat, centre_long], zoom_start=7, tiles=None)\n",
     "\n",
     "folium.raster_layers.WmsTileLayer(\n",
     "    url=\"https://a.tiles.maps.eox.at\",\n",
@@ -366,8 +368,8 @@
     "\n",
     "folium.raster_layers.WmsTileLayer(\n",
     "    url=wms_endpoint.partition(\"?\")[0],\n",
-    "    layers='S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__TRUE_COLOR',\n",
-    "    name='S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__TRUE_COLOR',\n",
+    "    layers=f\"{scene_id}__TRUE_COLOR\",\n",
+    "    name=f\"{scene_id}__TRUE_COLOR\",\n",
     "    fmt='image/png',\n",
     "    transparent=True,\n",
     "    overlay=True,\n",
@@ -376,8 +378,8 @@
     "\n",
     "folium.raster_layers.WmsTileLayer(\n",
     "    url=wms_endpoint.partition(\"?\")[0],\n",
-    "    layers='S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__outlines',\n",
-    "    name='S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE__outlines',\n",
+    "    layers=f\"{scene_id}__outlines\",\n",
+    "    name=f\"{scene_id}__outlines\",\n",
     "    fmt='image/png',\n",
     "    transparent=True,\n",
     "    overlay=True,\n",
@@ -488,14 +490,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d7e802c-dd9d-4ccb-834b-13e21ffa210f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e1e795d5-eecd-4617-a0b8-97e39a99405c",
    "metadata": {},
    "outputs": [],
@@ -512,22 +506,6 @@
    "source": [
     "wcs.contents.keys()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52b5ed61-5ac2-441b-8371-e299ff7e5a67",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df73c0b6-9106-4f11-8493-ba72d366115e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
