Switch to correct domain for the STAC API demo

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1973,7 +1973,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# base_domain = \"demo.eoepca.org\"\n",
+    "base_domain = \"demo.eoepca.org\"\n",
     "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'"
    ]
   },
