Using a properly harvested scenefor the Data Access demo

--- a/demoroot/notebooks/05 Data Access.ipynb
+++ b/demoroot/notebooks/05 Data Access.ipynb
@@ -82,8 +82,8 @@
    "source": [
     "#scene_id='S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'\n",
     "# scene_id='S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'\n",
-    "scene_id=\"S2B_MSIL2A_20190912T084559_N0213_R107_T36UXA_20190912T122242.SAFE\"\n",
-    "\n",
+    "# scene_id=\"S2B_MSIL2A_20190912T084559_N0213_R107_T36UXA_20190912T122242.SAFE\"\n",
+    "scene_id=\"S2B_MSIL2A_20190911T092029_N0213_R093_T34SFG_20190911T135255.SAFE\"\n",
     "#scene_id='S2B_MSIL1C_20210402T095029_R079_T33UXQ_20210402T121737'"
    ]
   },
