Add demo for open resources

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -373,6 +373,68 @@
     "tkt = requests.get(eric_pep_auth, headers=headers, verify=False)\n",
     "print(\"Retrying access to resource with proper token: \"+ str(tkt))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f686603a",
+   "metadata": {},
+   "source": [
+    "## Open Resources\n",
+    "Resources with open scope should be accessible to anyone. This test will add an open resource and then attempt to access it without using any type of authorization."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "fd919165",
+   "metadata": {},
+   "source": [
+    "### Add open resource\n",
+    "The operator user will perform a call to the PDP to add an open resource."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a79518da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#--------------------------\n",
+    "# INSERT OPEN RESOURCE\n",
+    "#--------------------------\n",
+    "uri = \"/demo/openResource\"\n",
+    "data = '{\"icon_uri\":\"' + uri + '\",\"name\":\"DemoOpenResource\",\"scopes\":[\"open\"]}'\n",
+    "headers = {'Content-Type': 'application/json, Authorization: Bearer '+ operator_id_token}\n",
+    "response = requests.post(eric_pep + '/resources', headers=headers, data=data, verify=False)\n",
+    "print(\"Open resource inserted with code: \" + str(response))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d8629fe0",
+   "metadata": {},
+   "source": [
+    " ### Access an open resource\n",
+    " We attempt to access the open resource, which should be retrieved without any type of authentication."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "747acdef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#--------------------------\n",
+    "# ACCESS TO OPEN RESOURCE --> The requested resource is retrieved without requiring credentials\n",
+    "#--------------------------\n",
+    "headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"X-Original-Uri\": uri}\n",
+    "resource_access = requests.get(eric_pep_auth, headers=headers, verify=False)\n",
+    "print(\"Open resources: \" + str(resource_access))"
+   ]
   }
  ],
  "metadata": {
