Comment open resources demo

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -404,11 +404,11 @@
     "#--------------------------\n",
     "# INSERT OPEN RESOURCE\n",
     "#--------------------------\n",
-    "uri = \"/demo/openResource\"\n",
-    "data = '{\"icon_uri\":\"' + uri + '\",\"name\":\"DemoOpenResource\",\"scopes\":[\"open\"]}'\n",
-    "headers = {'Content-Type': 'application/json, Authorization: Bearer '+ operator_id_token}\n",
-    "response = requests.post(eric_pep + '/resources', headers=headers, data=data, verify=False)\n",
-    "print(\"Open resource inserted with code: \" + str(response))"
+    "#uri = \"https://dummy-service.develop.eoepca.org/openResource\"\n",
+    "#data = '{\"icon_uri\":\"' + uri + '\",\"name\":\"DemoOpenResource\",\"scopes\":[\"open\"]}'\n",
+    "#headers = {'Content-Type': 'application/json, Authorization: Bearer '+ operator_id_token}\n",
+    "#response = requests.post(eric_pep + '/resources', headers=headers, data=data, verify=False)\n",
+    "#print(\"Open resource inserted with code: \" + str(response))"
    ]
   },
   {
@@ -431,9 +431,9 @@
     "#--------------------------\n",
     "# ACCESS TO OPEN RESOURCE --> The requested resource is retrieved without requiring credentials\n",
     "#--------------------------\n",
-    "headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"X-Original-Uri\": uri}\n",
-    "resource_access = requests.get(eric_pep_auth, headers=headers, verify=False)\n",
-    "print(\"Open resources: \" + str(resource_access))"
+    "#headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"X-Original-Uri\": uri}\n",
+    "#resource_access = requests.get(eric_pep_auth, headers=headers, verify=False)\n",
+    "#print(\"Open resources: \" + str(resource_access))"
    ]
   }
  ],
